--- a/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/PuzzleQuest.csproj
+++ b/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/PuzzleQuest.csproj
@@ -215,18 +215,18 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Database1.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Database1_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>Database1.mdf</DependentUpon>
-    </Content>
     <Content Include="Resources\2.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\3.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\BazaDanych.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\BazaDanych_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>BazaDanych.mdf</DependentUpon>
     </Content>
     <Content Include="Resources\belial_na_mapie.jpg" />
     <Content Include="Resources\belial_przeciwnik.jpg" />
