--- a/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/App.config
+++ b/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="PuzzleQuest.Properties.Settings.Database1ConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Resources\Database1.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Resources\BazaDanych.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
