--- a/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/PuzzleQuest.csproj
+++ b/PuzzleQuest 14.12.2019/PuzzleQuest/PuzzleQuest/PuzzleQuest.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Baal.cs" />
     <Compile Include="Beliar.cs" />
     <Compile Include="Duriel.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logowanie.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -100,6 +106,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tyrael.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Logowanie.resx">
       <DependentUpon>Logowanie.cs</DependentUpon>
     </EmbeddedResource>
